# pysmev

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  env.yml  environment.yml  pyproject.toml  requirements.txt  setup.py  to_do.md
env/: pyvenv.cfg
example/: example_smev_1h_obs.py  example_smev_5min_obs.py  test_smev_1h_obs.py
old_tests/: test_MC.py
res/: durations.csv
src/: test_MC.py  test_smev.py  test_smev_1h_obs.py
src/pysmev/: __init__.py  plotting.py  smev.py  smev_class.py  utils.py
src/pysmev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pysmev_luigicesarini.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/smev/: __init__.py
