[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysmev"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy==1.26.2",
  "pandas==2.2.3",
  "pyarrow==19.0.0",
  "scipy==1.14.1",
  "statsmodels==0.14.4",
  "matplotlib==3.10.0",
  "pre-commit==4.1.0"
]
description = "The Simplified Metastatistical Extreme Value analysis (SMEV)"
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11.5",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
authors = [
  {name = "Luigi Cesarini", email = "luigi.cesarini@iusspavia.it"},
]
maintainers = [
  {name = "Petr Vohnicky", email = "petr.vohnicky@unipd.it"},
]

[project.urls]
url = "https://github.com/luigicesarini/pysmev"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
pyTENAX = ["res/*"]